# Back-End

./: README.md  db.sqlite3  heroku.yml  pyproject.toml  requirements.txt
GameLogic/: create_pokemon.py  damage_calculator.py  give_cards.py  handle_attack.py  test_game_logic.py  type_table.py
Games/: models.py  serializer.py  urls.py  views.py
Games/migrations/: 0001_initial.py  0002_remove_game_player1_game_current_game_deck1_and_more.py  0003_remove_game_current_remove_game_deck1_and_more.py  0004_game_comp_poke_status_game_user_poke_status.py  0005_game_last_move.py  0006_rename_active_player_pokemon_game_active_user_pokemon.py  0007_remove_game_owner.py
Project/: settings.py  urls.py
Users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
Users/migrations/: 0001_initial.py  0002_alter_trainer_decks_alter_trainer_owner_and_more.py  0003_alter_pokemoncard_name.py  0004_pokemoncard_moves_pokemoncard_rarity_and_more.py  0005_alter_pokemoncard_moves_alter_pokemoncard_name_and_more.py  0006_alter_trainer_cards_delete_pokemoncard.py  0007_alter_trainer_cards.py  0008_alter_trainer_cards.py  0009_alter_trainer_cards.py  0010_alter_trainer_cards.py  0011_alter_trainer_cards.py  0012_alter_trainer_cards.py  0013_alter_trainer_cards.py  0014_alter_trainer_cards.py  0015_alter_trainer_cards.py  0016_remove_trainer_cards.py  0017_trainer_cards.py  0018_alter_trainer_cards.py  0019_remove_trainer_decks.py  0020_rename_cards_trainer_decks.py  0021_remove_trainer_decks_remove_trainer_prev_battles.py  0023_alter_trainer_cards.py  (+2 more)
