[tool.poetry]
name = "back-end"
version = "0.1.0"
description = ""
authors = ["Joseph Nguyen <josephnguyen2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
